<resources>
    <string name="app_name">LoadJsonData_Java</string>
    <string name="character_list">Character List</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="rarity">Rarity:</string>
    <string name="vision">Vision:</string>
    <string name="weapon">Weapon:</string>
    <string name="description">Description:</string>
</resources>